service.yml
kind: Service
apiVersion: v1
metadata:
  name: tablebrowser
spec:
  selector:
    name: tablebrowser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
