tablebrowser-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tablebrowser-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: applications.columbusecosystem.com
    http:
      paths: 
      - path: /user/app(/|$)(.*)
        backend:
          serviceName: tablebrowser
          servicePort: 8000
  tls:
  - secretName: tls-staging-cert
    hosts:
    - applications.columbusecosystem.com
